--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,9 @@ development:
 test:
   <<: *default
   database: english_diary_app_test
+  #元々defaultのhost: dbを使用していた（docker-composeと連携するためのコマンド）
+  #→circleciではdocker-composeを使用していない？
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
