#2 [fix] CircleCI実行時の/home/circleci/english_diary_app/db/schema.rb doesnt exist yetエラー対処

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,12 +53,11 @@ jobs:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run: bundle exec rake db:create
-      - run: bundle exec rake db:schema:load
+      - run: bundle exec rake db:migrate
       # Rspec
       - run:
           name: Rspec
           command: bundle exec rspec
-
 
 workflows:
   version: 2
