--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ yarn-debug.log*
 /public/uploads
 
 # End of https://www.toptal.com/developers/gitignore/api/rails.env
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
