#48 [fix] CircleCIで起きるRSpecのエラー「The asset tailwind.css is not present in the asset pipeline.」対処のため追記

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run: bundle exec rake db:create
       - run: bundle exec rake db:migrate
+      - run: bundle exec rake assets:precompile
       # Rspec
       - run:
           name: Rspec
