[update] #10 CircleCIでのAWSの設定

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,9 @@ jobs:
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: english_diary_app_test
+          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          AWS_REGION: $AWS_REGION
     working_directory: ~/english_diary_app
     steps:
       - checkout
