--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           POSTGRES_DB: english_diary_app_test
           AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-          AWS_REGION: $AWS_REGION
+          AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
     working_directory: ~/english_diary_app
     steps:
       - checkout
